--- a/src/componets/About.css
+++ b/src/componets/About.css
@@ -9,6 +9,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 700px;
     margin: 0 auto;
+    margin-bottom: 20px;
   }
   
   .about-card hr {
